@@ -169,4 +169,14 @@ prereq_is(
   },
 );
 
+# test case for #55713: support for use parent -norequire
+prereq_is(
+  'use parent -norequire, qw{ Parent::QW1 Parent::QW2 };',
+  {
+    'Parent::QW1' => 0,
+    'Parent::QW2' => 0,
+    parent => 0,
+  },
+);
+
 done_testing;
